# ewr-so-se-2024

./: .gitignore  .latexindent.yaml  README.md  bericht.tex  bericht_handout.tex  flake.nix  map.bib  map.tex  presentation.tex  pyproject.toml
.github/workflows/: check.yaml
docs/: conf.py  ewr_so_se_2024.approximation_of_pi.rst  ewr_so_se_2024.harmonic_series.rst  ewr_so_se_2024.rst  index.rst
ewr_so_se_2024/: Aufgabe 2.1.py  aufgabe_2.py  bericht.bib  bericht.tex  harmonic_convergence.py  main.py  pi_approximation.py  py_logspace.py  read_number.drawio  tools_read_save.py  utils.py
ewr_so_se_2024/Aufgabe 4/: Bericht
ewr_so_se_2024/Aufgabe3/: harmonic_convergence.py  main.py  tools_read_save.py
ewr_so_se_2024/approximation_of_pi/: PI  __main__.py  convergence.py  memory.py  runtime.py  sequences.py  utils.py
ewr_so_se_2024/aufgabe_3/: bericht_handout.tex  harmonic_convergence.py  main.py  read_number.drawio  tools_read_save.py
ewr_so_se_2024/harmonic_series/: harmonic_convergence.py  main.py  py_logspace.py  tools_read_save.py
ewr_so_se_2024/map/: runtime_analysis.py  sequences.py
ewr_so_se_2024/pi/: convergence.py  main.py  runtime.py  sequences.py  utils.py
src/approximation-of-pi/: bericht.bib  bericht.tex  presentation.bib
tests/: test_aufgabe_2.py  test_py_logspace.py
tex/approximation-of-pi/: bericht.tex  common.tex  presentation.bib  presentation.tex
tex/harmonic-series/: bericht.tex  bericht_handout.tex
