[tool.poetry]
name = "ewr-so-se-2024"
version = "0.1.0"
description = ""
authors = ["Michael van Straten <michael@vanstraten.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
