[tool.poetry]
name = "ewr-so-se-2024"
version = "0.1.0"
description = ""
authors = ["Michael van Straten <michael@vanstraten.de>", "Pascal Merz <merzpascal2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
click = "^8.1.7"
yaspin = "^3.0.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
pytest = "^8.2.0"
pylint = "^3.1.0"
mypy = "^1.1.0"
pdoc = "^14.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
