[tool.poetry]
name = "ewr-so-se-2024"
version = "0.1.0"
description = ""
authors = ["Michael van Straten <michael@vanstraten.de>", "Pascal Merz <merzpascal2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
yaspin = "^3.0.2"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
pytest = "^8.2.0"
pylint = "^3.1.0"
sphinx = "^7.3.7"
myst-parser = "^3.0.1"

[tool.poetry.scripts]
approximation-of-pi = "ewr_so_se_2024.approximation_of_pi.__main__:cli"
harmonic-series = "ewr_so_se_2024.harmonic_series.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
